[gd_scene load_steps=3 format=3 uid="uid://script_editor_ui"]

[ext_resource type="Script" path="res://src/ui/script_editor_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.055, 0.07, 0.97)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.25, 0.35, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ScriptEditorUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.9, 1.0)
theme_override_font_sizes/font_size = 14
text = "üìù Script Editor"
horizontal_alignment = 1

[node name="PathLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1.0)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NoScriptLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.45, 0.45, 0.5, 1.0)
theme_override_font_sizes/font_size = 12
text = "Click a script button
in the Inspector panel
to edit it here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.06, 0.065, 0.08, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 11
scroll_smooth = true
wrap_mode = 0
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
